crates/rome_formatter/tests/specs/prettier/cursor/range-4.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: range-4.js

---
# Input
```js
thisWontBeFormatted  ( 1  ,3)

<<<PRETTIER_RANGE_START>>>    thisWillBeFormatted    (2  ,3,   )

    <<<PRETTIER_RANGE_END>>>thisWontBeFormatted  (2, 9<|>0  ,)
    
```

# Output
```js
thisWontBeFormatted  ( 1  ,3)

<<<PRETTIER_RANGE_START>>>    thisWillBeFormatted    (2  ,3,   )

    <<<PRETTIER_RANGE_END>>>thisWontBeFormatted  (2, 9<|>0  ,)

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ range-4.js:3:3
  │
3 │ <<<PRETTIER_RANGE_START>>>    thisWillBeFormatted    (2  ,3,   )
  │   ^^^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ range-4.js:5:7
  │
5 │     <<<PRETTIER_RANGE_END>>>thisWontBeFormatted  (2, 9<|>0  ,)
  │       ^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
  ┌─ range-4.js:5:56
  │
5 │     <<<PRETTIER_RANGE_END>>>thisWontBeFormatted  (2, 9<|>0  ,)
  │                                                       -^ But this operator was encountered instead
  │                                                       │ 
  │                                                       This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
  ┌─ range-4.js:5:57
  │
5 │     <<<PRETTIER_RANGE_END>>>thisWontBeFormatted  (2, 9<|>0  ,)
  │                                                        -^ But this operator was encountered instead
  │                                                        │ 
  │                                                        This operator requires a right hand side value


```


